--- a/package.json
+++ b/package.json
@@ -9,17 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/free-regular-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@heroicons/react": "^2.1.1",
+    "@react-navigation/bottom-tabs": "^6.5.16",
+    "@react-navigation/drawer": "^6.6.11",
+    "@react-navigation/material-top-tabs": "^6.6.10",
+    "@react-navigation/native": "^6.1.14",
+    "@react-navigation/native-stack": "^6.9.22",
     "expo": "~50.0.8",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-svg": "^15.0.0"
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-pager-view": "6.2.3",
+    "react-native-picker-select": "^9.0.1",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-swipe-gestures": "^1.0.5",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.0.3",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
