--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
-    "zustand": "^4.5.1"
+    "zustand": "^4.5.1",
+    "expo-haptics": "~12.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
