--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -16,8 +16,10 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "expo": "~50.0.8",
+    "expo-haptics": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-pager-view": "6.2.3",
@@ -29,7 +31,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
     "zustand": "^4.5.1",
-    "expo-haptics": "~12.8.1"
+    "expo-linking": "~6.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
